--- a/src/Views/view.css
+++ b/src/Views/view.css
@@ -11,7 +11,14 @@
 }  */
 
 .view {
-    background-color: #f9f6f6;
+  /* background-color: linear-gradient(180deg, rgba(0,4,71,1) 0%, rgba(26,43,94,1) 100%) !important; */
+    /* background-color: #f9f6f6;s */
     height: 100vh;
+    width: 100%;
+    overflow-x: hidden !important;
+}
+
+.view .container-fluid {
+  padding: 0 !important;
 }
 
