--- a/src/Containers/Header/header.css
+++ b/src/Containers/Header/header.css
@@ -7,15 +7,23 @@
 
 .navbar  {
     background-color: #000447  !important;
-    width: 4%;
-    transition: .3s ease-in-out;
+   
+    width: 3.7rem;
+   
+    transition: .3s all;
     position: sticky  ;
     height: 100vh;
     overflow: hidden;
 }
 
+.navbar:hover {
+  width: 15%;
+  max-width: 40rem;
+}
+
 .navbar .logo {
-  width: 100%;
+  width: 4rem;
+  margin: 0 auto;
 }
 
 .navbar .logo img {
@@ -23,34 +31,44 @@
   filter: invert(1);
 }
 
+.navbar:hover .logo {
+  width: 4rem;
+}
+
 .navbar ul li {
     border-bottom: 1px  solid #606060;
     background-color: transparent;
-    color: #fff;
     padding-top: 30px ;
     padding-bottom: 30px ;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
+   
+}
+
+.navbar ul li a {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  position: relative;
+  gap: 2rem;
+  color: #fff;
+  text-decoration: none;
 }
 
 .navbar ul li:last-child {
   border: none;
 }
 
-.navbar ul li span {
+/* .navbar ul li span {
   position: absolute;
   right: -100%;
   transition: .3s all;
   visibility: hidden;
-}
+} */
 
-.navbar:hover { 
+/* .navbar:hover { 
   width: 15%;
-}
-
+} */
+/* 
 .navbar:hover ul li span {
   right: 10%;
   visibility: visible;
-}
+} */
