--- a/src/Views/Departments/department.css
+++ b/src/Views/Departments/department.css
@@ -5,13 +5,12 @@
 }
 
 .form_department {
-    width: 50%;
     height: fit-content;
-    background-color: #fff;
+    /* background-color: #fff; */
     border-radius: 0.25rem;
-    /* box-shadow: 0.5px .5px 3px #000; */
-    border: 3px solid #d21404;
-    /* overflow: hidden; */
+    box-shadow: 0.5px .5px 3px #000;
+    overflow: hidden;
+    /* border: 3px solid #d21404; */
 }
 
 .form_department .alertt {
