--- a/src/Views/EmployeeProfile/employee.css
+++ b/src/Views/EmployeeProfile/employee.css
@@ -1,17 +1,18 @@
-.main_form{
+.main_home{
     width: 100%;
      display: flex;
      align-items: center;
 }
 
 .home_form {
-    /* width: 30%; */
     height: fit-content;
-    background-color: #fff;
+    background-color: #ededef;
     border-radius: 0.25rem;
     box-shadow: 0.5px .5px 3px #000;
     overflow: hidden;
     margin:  auto;
+    /* background-color: #c51203; */
+    /* background-color: #20617f; */
     
 }
 
@@ -25,17 +26,16 @@
     /* padding: 30px 0; */
 }
 
+
 .home_form .form {
-    /* background-color: #c51203; */
+    background-color: #ededef;
     height: auto;
-    /* background-color: #ededef; */
+    /* background-color: transparent; */
+    /* background-image: none !important; */
+    /* background-color: #c51203; */
     /* background-color: #20617f; */
     /* height: 500px; */
     /* overflow: auto; */
-    background-image: url('../../assets/images/1.svg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
 }
 
 .home_form .form::-webkit-scrollbar-thumb {
@@ -51,8 +51,8 @@
 .home_form .form label {
     font-size: .7rem;
     font-weight: 500;
-    color: #fff;
-    /* color: #000447; */
+    color: #000447;
+    /* color: #fff; */
 }
 
 .home_form .form input,
