--- a/src/Containers/HeaderTop/headerTop.css
+++ b/src/Containers/HeaderTop/headerTop.css
@@ -2,22 +2,30 @@
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: #000447;
+    overflow-x: auto;
+    border-left: 1px solid #606060;
+    background-color: #36454F; 
+    /* background-color: #D1CAC0  agrible grey;  */
+  /* background-color: #FFFFF0  !important; ivory grey */
+    /* background-color: #000447; */
 }
 
 .header_top .navbar a {
     color: #fff;
+    /* color: #000; */
 }
 
 .header_top .navbar .nav-item a,
 .header_top .navbar .navbar-nav a {
     color: #fff;
+    /* color: #000; */
 }
 
 .header_top .navbar a:hover,
 .header_top .navbar .nav-item a:hover,
 .header_top .navbar .navbar-nav a:hover {
     color: #fff;
+    /* color: #000; */
 }
 
 .header_top .navbar {
