--- a/src/Views/EmployeeProfile/employee.css
+++ b/src/Views/EmployeeProfile/employee.css
@@ -19,23 +19,16 @@
 
 
 .home_form .alertt {
-    background-color: #000447 !important;
+    background-color: #36454F !important;
+    /* background-color: #000447 !important; */
     color: #fff;
     border: none;
     border-radius: 3px 3px 0 0;
-    /* padding: 30px 0; */
 }
 
 
 .home_form .form {
-    /* background-color: #ededef; */
     height: auto;
-    /* background-color: transparent; */
-    /* background-image: none !important; */
-    /* background-color: #c51203; */
-    /* background-color: #20617f; */
-    /* height: 500px; */
-    /* overflow: auto; */
 }
 
 .home_form .form::-webkit-scrollbar-thumb {
@@ -51,7 +44,7 @@
 .home_form .form label {
     font-size: .7rem;
     font-weight: 500;
-    color: #000447;
+    color: #36454F;
     /* color: #fff; */
 }
 
@@ -81,7 +74,8 @@
 }
 
 .home_form .form .form_btn {
-    background-color: #000447;
+    background-color: #36454F;
+    /* background-color: #000447; */
     border-color: transparent;
 }
 
