--- a/src/Views/view.css
+++ b/src/Views/view.css
@@ -15,6 +15,7 @@
     /* background-color: #f9f6f6;s */
     height: 100vh;
     width: 100%;
+    position: sticky;
     overflow-x: hidden !important;
 }
 
