--- a/src/Containers/Header/header.css
+++ b/src/Containers/Header/header.css
@@ -24,6 +24,9 @@
   margin: 0 auto;
   display: flex;
   align-items: center;
+  background-color: #36454F;
+  /* background-color: #73818a; */
+  /* width: 100%; */
 }
 
 .navbar_ .logo img {
