--- a/src/Views/Auth/UserProfile.css
+++ b/src/Views/Auth/UserProfile.css
@@ -10,6 +10,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  padding-top: 5%;
 }
 
 .main_user2::before {
