--- a/cloudstaffsolutions/client/src/Views/Tabs/CompanyProfile/ComplanyProfile.css
+++ b/cloudstaffsolutions/client/src/Views/Tabs/CompanyProfile/ComplanyProfile.css
@@ -115,3 +115,38 @@
 }
 
 /* .Navv  */
+
+
+@media only screen and (max-width: 1114px)  {
+    .company_main_tab .alertt {
+        width: 35%;
+    }
+}
+
+
+@media only screen and (max-width: 1000px) {
+    .company_main_tab .tabbs1 {
+        width: 100% !important;
+    }
+
+    .company_main_tab .cennt {
+        padding: 5%  20px 5% 20px ;
+    }
+
+    .navbar-nav {
+        flex-direction: row !important;
+    }
+  }
+
+
+  @media only screen and (max-width: 650px) {
+    .company_main_tab .alertt {
+        width: 50%;
+    }
+  }
+
+  @media only screen and (max-width: 504px) {
+    .company_main_tab .alertt {
+        width: 80%;
+    }
+  }
