--- a/cloudstaffsolutions/client/src/Views/Users/user.css
+++ b/cloudstaffsolutions/client/src/Views/Users/user.css
@@ -146,3 +146,55 @@ textarea {
 .user_form .list li .text button {
     font-size: 14px;
 }
+
+
+@media only screen and (max-width: 1000px) {
+    .main_user .user_form {
+        width: 100% !important;
+    }
+
+    .main_user .cennt {
+        padding: 0  20px ;
+    }
+  }
+
+
+  @media only screen and (max-width: 600px) {
+    .main_user .user_form .form {
+        width: 100% !important;
+    }
+  }
+
+  @media only screen and (max-width: 536px) {
+    .user_form .list li .text span {
+        font-size: 12px;
+    }
+    .user_form .list li .text button {
+        font-size: 10px;
+        padding: 5px 18px;
+    }
+
+    .user_form .list li {
+        flex-direction: column;
+        align-items: center !important;
+    }
+
+    .user_form .list li .text {
+        flex-direction: column;
+    }
+
+    .user_form .list li .img {
+        width: 30%;
+    }
+  }
+
+
+  /* @media only screen and (max-width: 656px) {
+    .main_user .user_form .form .input_group {
+        flex-direction: column;
+    }
+
+    .main_user .user_form .form .input_group div {
+        width: 100%;
+    }
+  } */
